[gd_scene load_steps=5 format=3 uid="uid://3inh0u4giphy"]

[ext_resource type="Script" uid="uid://ttnpfghyctg0" path="res://scripts/projectiles/bullet.gd" id="1_48g2p"]
[ext_resource type="Texture2D" uid="uid://b4n3kqck5uw0c" path="res://assets/sprites/projectile_bullet_yellow.png" id="1_yvfy2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_48g2p"]
size = Vector2(2, 1)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_k5ji7"]
properties/0/path = NodePath(".:peer_id")
properties/0/spawn = true
properties/0/replication_mode = 1

[node name="bullet" type="Area2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_48g2p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_48g2p")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_yvfy2")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_k5ji7")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
